Form align fixed

--- a/CGI_Easter_Page/style.css
+++ b/CGI_Easter_Page/style.css
@@ -7,3 +7,8 @@ body{
   color: red;
   padding-left: 2%;
 }
+form{
+  align-content: center;
+  padding: 20%;
+  
+}
